:lipstick: Fix the issue where the text color of the <button> element appears blue on iOS

--- a/src/styles/base/Base.scss
+++ b/src/styles/base/Base.scss
@@ -88,6 +88,7 @@ button{
   padding: 1rem;
   align-self: center; 
   border: 1px solid rgba($colors-black-0, 0.2);
+  color: $colors-black-0;
 
   a{
     color: $colors-black-0;
